# acled

./: .gitignore  .pylintrc  README.md  pyproject.toml  setup.py
.github/: release-drafter.yml
.github/codeql/: codeql-config.yml
.github/workflows/: auto-version.yml  codeql.yml  main.yml  pre-release-test.yml  publish.yml  release-drafter.yml  test.yml
acled/: auth.py  exceptions.py  log.py
acled/cli/: main.py
acled/cli/commands/: auth.py  base.py  data.py
acled/cli/formatters/: __init__.py  base.py  csv.py  json.py  summary.py  table.py
acled/cli/utils/: auth.py  config.py
acled/clients/: acled_data_client.py  actor_client.py  actor_type_client.py  base_http_client.py  cast_client.py  client.py  country_client.py  deleted_client.py  region_client.py
acled/models/: __init__.py  data_models.py  enums.py
tests/: test_acled_data_client.py  test_actor_client.py  test_actor_type_client.py  test_auth.py  test_base_http_client.py  test_cast_client.py  test_country_client.py  test_deleted_client.py  test_input_validation.py  test_integration.py  test_log.py  test_region_client.py
tests/cli/commands/: test_auth.py  test_base.py
tests/cli/utils/: test_auth.py  test_config.py
