[project]
name = "acled"
version = "0.1.6"
description = "A Python library that unofficially wraps the ACLED API."
authors = [
    {name = "Blaze Burgess", email = "blaze.i.burgess@gmail.com"}
]
license = {text = "GPL 3"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pylint",
    "pytest-cov"
]

[project.urls]
Homepage = "https://github.com/blazeiburgess/acled"
Repository = "https://github.com/blazeiburgess/acled"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["acled"]

[tool.poetry]
packages = [
    { include = "acled" },
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pylint = "^2.17.4"
pytest-cov = "^4.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=acled --cov-report=term-missing"