[project]
name = "acled"
version = "0.1.7"
description = "A Python library that unofficially wraps the ACLED API."
authors = [
    {name = "Blaze Burgess", email = "blaze.i.burgess@gmail.com"}
]
license = {text = "GPL 3"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["acled", "api", "conflict", "data", "political violence", "research"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pylint",
    "pytest-cov"
]

[project.urls]
Homepage = "https://github.com/blazeiburgess/acled"
Repository = "https://github.com/blazeiburgess/acled"

[build-system]
requires = ["setuptools>=61.0", "wheel", "build", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools_scm]
write_to = "acled/_version.py"

[tool.setuptools.packages.find]
include = ["acled*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=acled --cov-report=term-missing"
