[project]
name = "acled"
dynamic = ["version"]
description = "A Python library that unofficially wraps the ACLED API."
authors = [
    {name = "Blaze Burgess", email = "blaze.i.burgess@gmail.com"}
]
license = {text = "GPL 3"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["acled", "api", "conflict", "data", "political violence", "research"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.33.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pylint>=4.0",
    "pytest-cov>=7.0"
]
cli = [
    "tabulate>=0.10.0",  # For table formatting
    "colorama>=0.4.6",  # For colored output (cross-platform)
    "cryptography>=46.0.0",  # For secure credential storage
    "keyring>=25.0.0",  # Cross-platform secure storage
]
all = [
    "tabulate>=0.10.0",
    "colorama>=0.4.6",
    "cryptography>=46.0.0",
    "keyring>=25.0.0",
    "pytest>=9.0",
    "pylint>=4.0",
    "pytest-cov>=7.0"
]

[project.urls]
Homepage = "https://github.com/blazeiburgess/acled"
Repository = "https://github.com/blazeiburgess/acled"

[project.scripts]
acled = "acled.cli.main:main"

[build-system]
requires = ["setuptools>=82.0", "wheel", "build", "setuptools_scm>=10.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools_scm]
write_to = "acled/_version.py"

[tool.setuptools.packages.find]
include = ["acled*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=acled --cov-report=term-missing"
